work on artbox component

--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -13,6 +13,7 @@
     "disable-scroll": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-size": "^2.0.0",
     "react-intersection-observer": "^9.4.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
