--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -11,10 +11,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-visibility-sensor": "^5.1.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
