--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://terrenceshi.com",
+  "homepage": "https://terrenceshi.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
